fix recent list width on mobile

--- a/app/frontend/src/components/Brackets.css
+++ b/app/frontend/src/components/Brackets.css
@@ -142,3 +142,14 @@
 .recent-label {
   width: 150px;
 }
+
+.recent-field-body {
+  display: flex;
+  flex-basis: 0;
+  flex-grow: 5;
+}
+
+.recent-field {
+  flex-grow: 1;
+  max-width: calc(100vw - 20px);
+}
